# forza-key-overlay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-release.yml
docs/superpowers/plans/: 2026-06-16-windows-key-overlay.md
docs/superpowers/specs/: 2026-06-16-windows-key-overlay-design.md
scripts/: build-windows.sh
src/: lib.rs  main.rs  overlay_state.rs  windows_app.rs
